add new model that includes shots on target

--- a/DixonColesAnalysis.ipynb
+++ b/DixonColesAnalysis.ipynb
@@ -1208,7 +1208,7 @@
    "source": [
     "## Conclusions\n",
     "\n",
-    "I've investigated the classic model of Dixon & Coles in the context of the 2015/16 PL season. The model produces results that agree with intuition about the form of teams, and the probabilities that it produces are in reasonable agreement with, although less or equally accurate to, the Bet365 probabilities. The results in terms of a betting strategy are less positive than were found by Dixon & Coles in 1997, which is to be expected since the models used by betting companies have presumably become more accurate in the last twenty years. Nonetheless, the model is simple and quite effective. \n",
+    "I've investigated the classic model of Dixon & Coles in the context of the 2015/16 PL season. The model produces results that agree with intuition about the form of teams, and the probabilities that it produces are in reasonable agreement with, although less than or equally accurate to, the Bet365 probabilities. The results in terms of a betting strategy are less positive than were found by Dixon & Coles in 1997, which is to be expected since the models used by betting companies have presumably become more accurate in the last twenty years. Nonetheless, the model is simple and quite effective. \n",
     "\n",
     "The code that I wrote to do this analysis is in this repo, in `dixoncoles.py`."
    ]
