start writing notebook about new model

--- a/DixonColesAnalysis.ipynb
+++ b/DixonColesAnalysis.ipynb
@@ -87,6 +87,7 @@
     "import seaborn as sns; sns.set_style()\n",
     "import dixoncoles as d \n",
     "import pandas as pd \n",
+    "import numpy as np\n",
     "%matplotlib inline\n",
     "\n",
     "data,teams = d.load_and_preprocess();"
