touch ups and document stuff

--- a/ShotsOnTarget.ipynb
+++ b/ShotsOnTarget.ipynb
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data table I've constructed is very similar to the previous notebook. We are still looking at the Premier League (PL) season 2015/16, but there are now two extra columns: 'HomeST' and 'AwayST'. These quantify the number of goals scored by the home team and the away team, respectively. Let's look at how these are distributed."
+    "The data table I've constructed is very similar to the previous notebook. We are still looking at the Premier League (PL) season 2015/16, but there are now two extra columns: 'HomeST' and 'AwayST'. These are the number of goals scored by the home team and the away team, respectively. Let's look at how these are distributed."
    ]
   },
   {
@@ -274,7 +274,7 @@
     "\n",
     "In other words, the probability of the home team scoring `X` goals given that they achieved `Q` shots on target is a binomial distribution with a success probability of `epsilon_home`, and likewise for the away team. Thus, the new model contains 61 parameters: 20 `alpha` parameters, which quantify the propensity of each team to create chances, 20 `beta` parameters, which quantify how well a team defends, 20 `epsilon` parameters, which quantify how efficient teams are at converting shots on target into goals, and one `gamma` parameter that represents home advantage (we can see that home teams typically achieve roughly one more shot than the away team).\n",
     "\n",
-    "First, I'll fit the model to the PL season using the sliding window model from the previous notebook. Inspection of the parameters will give some intuition on the parameters."
+    "First, I'll fit the model to the PL season using the sliding window model from the previous notebook."
    ]
   },
   {
@@ -412,7 +412,7 @@
    "source": [
     "## Comparison with Dixon & Coles\n",
     "\n",
-    "I will now compare how predictive the new model is compared to the original Dixon & Coles approach. To do this, I will produce outcome probabilities for each match in the season. I'll use the pseudo-likelihood, described in Dixon & Coles and in the previous notebook, to fit the model. The pseudo-likelihood downweights matches in the past by a factor of `exp(-zeta * T)`, where T is the time since the match in question and the date when predictions are required. the parameter `zeta` quantifies how much matches in the past should be down-weighted. It turns out that the optimal value of `zeta` for the new model is nearly identical to the value in the previous notebook: `zeta = 0.003 days^-1`."
+    "I will now compare how predictive the new model is compared to the original Dixon & Coles approach. To do this, I will produce outcome probabilities for each match in the season. I'll use the pseudo-likelihood, described in Dixon & Coles and in the previous notebook, to fit the model. The pseudo-likelihood downweights matches in the past by a factor of `exp(-zeta * T)`, where T is the time between the match in question and the date when predictions are required. the parameter `zeta` quantifies how much matches in the past should be down-weighted. It turns out that the optimal value of `zeta` for the new model is nearly identical to the value in the previous notebook: `zeta = 0.003 days^-1`."
    ]
   },
   {
@@ -468,7 +468,7 @@
     "\n",
     "`pred_log_likelihood = log(prob_outcome)`\n",
     "\n",
-    "i.e., the log of the predicted probability of the true outcome. For example, the model might predict probabilities of (0.5, 0.2, 0.3) for home win, draw and away win for a given match. If the result turned out to be a draw, then the predictive log-likelihood is equal to log(0.2) =  -1.6. We then add up the contributions from all the matches in the season. If a model is good, then it will have a larger predictive log-likelihood, because it correctly assigns large probabilities to the correct outcome. Lets see how these numbers compare for our two models."
+    "i.e., the log of the predicted probability of the true outcome. For example, the model might predict probabilities of (0.5, 0.2, 0.3) for home win, draw and away win for a given match. If the result turned out to be a draw, then the predictive log-likelihood is equal to log(0.2) =  -1.6. We then add up the contributions from all the matches in the season. If a model is good, then it will have a larger predictive log-likelihood, because it assigns large probabilities to the true outcomes. Let's see how these numbers compare for the two models."
    ]
   },
   {
@@ -557,7 +557,7 @@
    "source": [
     "In order to test how valid my modelling assumptions are, I will now simulate a PL season using my model. For the model parameters, I will use the values predicted by the model when it is fit to the entire 2015/16 PL season. This assumes that the model parameters don't change over the course of the season, which is contradicted by the figures above. However, the changes are quite small, and I don't have a model for how they might vary with time.\n",
     "\n",
-    "In order to simulate a season, I first have to generate a fake fixture list. This is simple, one just has to calculate all possible pairings of PL teams (of which there are 190), and then store two fixtures per pair (because each team must play home and away). Then, I draw outcomes for the number of shots on target for each team by sampling Poisson distributions with rates `alpha_home * beta_away * gamma` and `alpha_away * beta_home`. Once I have drawn a number of shots on target for each team, I then draw the number of goals scored from binomial distributions with success probabilities of `epsilon_home` and `epsilon_away`, and set the number of trials equal to the number of shots on target that were previously drawn for each team."
+    "In order to simulate a season, I first have to generate a fake fixture list. This is simple, one just has to calculate all possible pairings of PL teams (of which there are 190), and then store two fixtures per pair (because each team must play home and away). Then, I draw outcomes for the number of shots on target for each team by sampling Poisson distributions with rates `(alpha_home * beta_away * gamma)` and `(alpha_away * beta_home)`. Once I have drawn a number of shots on target for each team, I then draw the number of goals scored from binomial distributions with success probabilities of `epsilon_home` and `epsilon_away`, and set the number of trials equal to the number of shots on target that were previously drawn for each team."
    ]
   },
   {
@@ -594,7 +594,7 @@
     "fig, ax = plt.subplots(4,2,figsize=(7,9),sharey=True)\n",
     "sns.countplot(fake_data['HomeST'],ax=ax[0,0],color='r')\n",
     "sns.countplot(data['HomeST'],ax=ax[0,1],color='0.5')\n",
-    "sns.countplot(fake_data['AwaySt'],ax=ax[1,0],color='r')\n",
+    "sns.countplot(fake_data['AwayST'],ax=ax[1,0],color='r')\n",
     "sns.countplot(data['AwayST'],ax=ax[1,1],color='0.5')\n",
     "sns.countplot(fake_data['HomeGoals'],ax=ax[2,0],color='r')\n",
     "sns.countplot(data['HomeGoals'],ax=ax[2,1],color='0.5')\n",
@@ -717,7 +717,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, the model got 3 of the top four correct, and also correctly predicted that Aston Villa would finish last (in fact, having experimented with simulating the season multiple times, Aston Villa almost *always* finish last - they were truly dreadful!) There are a few oddities. For example, Man City finished 11th! This is pretty far from their true position of 4th. Newcastle finished much higher than they did in the real season, where they were relegated. A similar thing happened with Norwich. Overall, the distribution of points scored by the teams is quite realistic. The winner scored 77 points (compared to 81 in the real season) and Villa obtained 22 (compared to 17 in the real season)."
+    "So, the model got 3 of the top four correct, and also correctly placed Aston Villa last (in fact, having experimented with simulating the season multiple times, Aston Villa almost *always* finish last - they were truly dreadful!) There are a few oddities. For example, Man City finished 11th! This is pretty far from their true position of 4th. Newcastle finished much higher than they did in the real season, where they were relegated. A similar thing happened with Norwich. Overall, the distribution of points scored by the teams is quite realistic. The winner scored 77 points (compared to 81 in the real season) and Villa obtained 22 (compared to 17 in the real season).\n",
+    "\n",
+    "It's worth noting that it would be a concern if the simulated season consistently reproduced *exactly* the right results. That would be suggestive that it is over-fitting the data. Because football is a low-scoring sport, it is very difficult to precisely predict the outcome every time, and one should be extremely wary of any model that appears to predict accurately the scores of all the matches to which it was fitted.\n",
+    "\n",
+    "Another point is that a more rigorous check would have been to fit the model to the first half of the season, and then to predict what happened in the second half of the season. Here, I am fitting the model to the same data against which it is being checked, which isn't ideal statistically. However, since I am only qualitatively assessing performance, it is relatively unimportant."
    ]
   },
   {
@@ -726,7 +730,13 @@
    "source": [
     "## Conclusions\n",
     "\n",
-    "Overall, the new model seems to work pretty well in predicting the outcome of games. It is certainly an improvement over the original Dixon & Coles model, although it appears to still be pretty inferior relative to whatever model Bet365 are using. The model also seems to do a decent job of predicting the number of shots on target, and matches the overall distribution of goals and shots on target for the season quite nicely. "
+    "Overall, the new model seems to work pretty well in predicting the outcome of games. It is certainly an improvement over the original Dixon & Coles model, although it appears to still be pretty inferior relative to whatever model Bet365 are using. The model also seems to do a decent job of predicting the number of shots on target, and matches the overall distribution of goals and shots on target for the season quite nicely. \n",
+    "\n",
+    "Without the introduction of new data, there is at least one obvious way that the present model could be made more sophisticated. Currently, I am assuming that the efficiency with which teams convert shots on target into goals is independent of their opposition. Therefore, a simple modification could be to write \n",
+    "\n",
+    "`epsilon = delta / eta`\n",
+    "\n",
+    "where `epsilon` is the efficiency of scoring, but it is now written in terms of an attack parameter `delta`, which will take on a value between 0 and 1, and a 'goalkeeper' parameter `eta`, which can take any value between 1 and infinity. The better the goalkeeper, the larger the value of `eta`, thereby increasing the number of shots on target required to score a goal. The perfect goalkeeper would have `eta = infinity`, because they would save every shot and so the probability of scoring a goal given a shot on target is zero. The better a team is at finishing, the larger their value of `delta` will be. Such a modification would increase the number of parameters in the model from 61 to 71, but would allow for more insight into the quality of goalkeepers in the league (and presumably improve the predictive performance of the model as well). "
    ]
   }
  ],
